変更したためコミット

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <a href="contact.html"><li>Contact</li></a>
         </ul>
       </nav>
-      <h1>DIC Coffee</h1>
-      <small>natural organic coffee</small>
+      <div class="key section_inner">
+        <h1>DIC Coffee</h1>
+        <small>natural organic coffee</small>
+      </div>
     </header>
     <section>
       <article class="section_inner">
