変更したためコミット

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
       <div class="key section_inner">
         <h1>DIC Coffee</h1>
-        <small>natural organic coffee</small>
+        <p>natural organic coffee</p>
       </div>
     </header>
     <section>
